src/parser/JFLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 ./src/Parser/Grammar/JFL.g 2013-08-10 15:42:50

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class JFLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "CHAIN_OPERATOR", "COMPARATOR", "DIGIT", "ESCAPE_SEQ", "ESC_ID", "ESC_STRING", "EXPONENT", "EXPR", "FALSE", "FILTER", "HEX_DIGIT", "ID", "NULL", "NUMBER", "REGEX", "STRING", "TRUE", "UNICODE_ESC", "WS", "'!'", "'('", "')'", "'*'", "','", "'.'", "':'", "'?'", "'['", "']'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int BLOCK=4;
	public const int CHAIN_OPERATOR=5;
	public const int COMPARATOR=6;
	public const int DIGIT=7;
	public const int ESCAPE_SEQ=8;
	public const int ESC_ID=9;
	public const int ESC_STRING=10;
	public const int EXPONENT=11;
	public const int EXPR=12;
	public const int FALSE=13;
	public const int FILTER=14;
	public const int HEX_DIGIT=15;
	public const int ID=16;
	public const int NULL=17;
	public const int NUMBER=18;
	public const int REGEX=19;
	public const int STRING=20;
	public const int TRUE=21;
	public const int UNICODE_ESC=22;
	public const int WS=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;

	public JFLParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public JFLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return JFLParser.tokenNames; } }
	public override string GrammarFileName { get { return "./src/Parser/Grammar/JFL.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_jfl();
	partial void LeaveRule_jfl();
	// $ANTLR start "jfl"
	// ./src/Parser/Grammar/JFL.g:20:8: public jfl : block ;
	[GrammarRule("jfl")]
	public AstParserRuleReturnScope<object, IToken> jfl()
	{
		EnterRule_jfl();
		EnterRule("jfl", 1);
		TraceIn("jfl", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> block1 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "jfl");
		DebugLocation(20, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:20:12: ( block )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:20:14: block
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(20, 14);
			PushFollow(Follow._block_in_jfl47);
			block1=block();
			PopFollow();

			adaptor.AddChild(root_0, block1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("jfl", 1);
			LeaveRule("jfl", 1);
			LeaveRule_jfl();
		}
		DebugLocation(21, 1);
		} finally { DebugExitRule(GrammarFileName, "jfl"); }
		return retval;

	}
	// $ANTLR end "jfl"

	partial void EnterRule_block();
	partial void LeaveRule_block();
	// $ANTLR start "block"
	// ./src/Parser/Grammar/JFL.g:23:1: block : '{' ( properties )? '}' -> ^( BLOCK ( properties )? ) ;
	[GrammarRule("block")]
	private AstParserRuleReturnScope<object, IToken> block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		TraceIn("block", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal2 = default(IToken);
		IToken char_literal4 = default(IToken);
		AstParserRuleReturnScope<object, IToken> properties3 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal2_tree = default(object);
		object char_literal4_tree = default(object);
		RewriteRuleITokenStream stream_34=new RewriteRuleITokenStream(adaptor,"token 34");
		RewriteRuleITokenStream stream_35=new RewriteRuleITokenStream(adaptor,"token 35");
		RewriteRuleSubtreeStream stream_properties=new RewriteRuleSubtreeStream(adaptor,"rule properties");
		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(23, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:23:7: ( '{' ( properties )? '}' -> ^( BLOCK ( properties )? ) )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:23:9: '{' ( properties )? '}'
			{
			DebugLocation(23, 9);
			char_literal2=(IToken)Match(input,34,Follow._34_in_block58);  
			stream_34.Add(char_literal2);

			DebugLocation(23, 13);
			// ./src/Parser/Grammar/JFL.g:23:13: ( properties )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==ESC_ID||LA1_1==ID||LA1_1==REGEX||LA1_1==24||LA1_1==27))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// ./src/Parser/Grammar/JFL.g:23:13: properties
				{
				DebugLocation(23, 13);
				PushFollow(Follow._properties_in_block60);
				properties3=properties();
				PopFollow();

				stream_properties.Add(properties3.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(23, 25);
			char_literal4=(IToken)Match(input,35,Follow._35_in_block63);  
			stream_35.Add(char_literal4);



			{
			// AST REWRITE
			// elements: properties
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 23:29: -> ^( BLOCK ( properties )? )
			{
				DebugLocation(23, 32);
				// ./src/Parser/Grammar/JFL.g:23:32: ^( BLOCK ( properties )? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(23, 34);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(BLOCK, "BLOCK"), root_1);

				DebugLocation(23, 40);
				// ./src/Parser/Grammar/JFL.g:23:40: ( properties )?
				if (stream_properties.HasNext)
				{
					DebugLocation(23, 40);
					adaptor.AddChild(root_1, stream_properties.NextTree());

				}
				stream_properties.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
		}
		DebugLocation(24, 1);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return retval;

	}
	// $ANTLR end "block"

	partial void EnterRule_properties();
	partial void LeaveRule_properties();
	// $ANTLR start "properties"
	// ./src/Parser/Grammar/JFL.g:26:1: properties : property ( ',' ! property )* ;
	[GrammarRule("properties")]
	private AstParserRuleReturnScope<object, IToken> properties()
	{
		EnterRule_properties();
		EnterRule("properties", 3);
		TraceIn("properties", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal6 = default(IToken);
		AstParserRuleReturnScope<object, IToken> property5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> property7 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal6_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "properties");
		DebugLocation(26, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:27:2: ( property ( ',' ! property )* )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:27:4: property ( ',' ! property )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(27, 4);
			PushFollow(Follow._property_in_properties84);
			property5=property();
			PopFollow();

			adaptor.AddChild(root_0, property5.Tree);
			DebugLocation(27, 13);
			// ./src/Parser/Grammar/JFL.g:27:13: ( ',' ! property )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==28))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./src/Parser/Grammar/JFL.g:27:14: ',' ! property
					{
					DebugLocation(27, 17);
					char_literal6=(IToken)Match(input,28,Follow._28_in_properties87); 
					DebugLocation(27, 19);
					PushFollow(Follow._property_in_properties90);
					property7=property();
					PopFollow();

					adaptor.AddChild(root_0, property7.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("properties", 3);
			LeaveRule("properties", 3);
			LeaveRule_properties();
		}
		DebugLocation(28, 1);
		} finally { DebugExitRule(GrammarFileName, "properties"); }
		return retval;

	}
	// $ANTLR end "properties"

	partial void EnterRule_property();
	partial void LeaveRule_property();
	// $ANTLR start "property"
	// ./src/Parser/Grammar/JFL.g:30:1: property : ( '!' )? propertyName ( filter )? ( ':' block )? -> ^( propertyName ( '!' )? ( filter )? ( block )? ) ;
	[GrammarRule("property")]
	private AstParserRuleReturnScope<object, IToken> property()
	{
		EnterRule_property();
		EnterRule("property", 4);
		TraceIn("property", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal8 = default(IToken);
		IToken char_literal11 = default(IToken);
		AstParserRuleReturnScope<object, IToken> propertyName9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> filter10 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block12 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal8_tree = default(object);
		object char_literal11_tree = default(object);
		RewriteRuleITokenStream stream_24=new RewriteRuleITokenStream(adaptor,"token 24");
		RewriteRuleITokenStream stream_30=new RewriteRuleITokenStream(adaptor,"token 30");
		RewriteRuleSubtreeStream stream_propertyName=new RewriteRuleSubtreeStream(adaptor,"rule propertyName");
		RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		try { DebugEnterRule(GrammarFileName, "property");
		DebugLocation(30, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:31:2: ( ( '!' )? propertyName ( filter )? ( ':' block )? -> ^( propertyName ( '!' )? ( filter )? ( block )? ) )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:31:4: ( '!' )? propertyName ( filter )? ( ':' block )?
			{
			DebugLocation(31, 4);
			// ./src/Parser/Grammar/JFL.g:31:4: ( '!' )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==24))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// ./src/Parser/Grammar/JFL.g:31:4: '!'
				{
				DebugLocation(31, 4);
				char_literal8=(IToken)Match(input,24,Follow._24_in_property105);  
				stream_24.Add(char_literal8);


				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(31, 9);
			PushFollow(Follow._propertyName_in_property108);
			propertyName9=propertyName();
			PopFollow();

			stream_propertyName.Add(propertyName9.Tree);
			DebugLocation(31, 22);
			// ./src/Parser/Grammar/JFL.g:31:22: ( filter )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==32))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// ./src/Parser/Grammar/JFL.g:31:22: filter
				{
				DebugLocation(31, 22);
				PushFollow(Follow._filter_in_property110);
				filter10=filter();
				PopFollow();

				stream_filter.Add(filter10.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(31, 30);
			// ./src/Parser/Grammar/JFL.g:31:30: ( ':' block )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_1 = input.LA(1);

			if ((LA5_1==30))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// ./src/Parser/Grammar/JFL.g:31:31: ':' block
				{
				DebugLocation(31, 31);
				char_literal11=(IToken)Match(input,30,Follow._30_in_property114);  
				stream_30.Add(char_literal11);

				DebugLocation(31, 35);
				PushFollow(Follow._block_in_property116);
				block12=block();
				PopFollow();

				stream_block.Add(block12.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }



			{
			// AST REWRITE
			// elements: propertyName, 24, filter, block
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 31:43: -> ^( propertyName ( '!' )? ( filter )? ( block )? )
			{
				DebugLocation(31, 46);
				// ./src/Parser/Grammar/JFL.g:31:46: ^( propertyName ( '!' )? ( filter )? ( block )? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(31, 48);
				root_1 = (object)adaptor.BecomeRoot(stream_propertyName.NextNode(), root_1);

				DebugLocation(31, 61);
				// ./src/Parser/Grammar/JFL.g:31:61: ( '!' )?
				if (stream_24.HasNext)
				{
					DebugLocation(31, 61);
					adaptor.AddChild(root_1, stream_24.NextNode());

				}
				stream_24.Reset();
				DebugLocation(31, 66);
				// ./src/Parser/Grammar/JFL.g:31:66: ( filter )?
				if (stream_filter.HasNext)
				{
					DebugLocation(31, 66);
					adaptor.AddChild(root_1, stream_filter.NextTree());

				}
				stream_filter.Reset();
				DebugLocation(31, 74);
				// ./src/Parser/Grammar/JFL.g:31:74: ( block )?
				if (stream_block.HasNext)
				{
					DebugLocation(31, 74);
					adaptor.AddChild(root_1, stream_block.NextTree());

				}
				stream_block.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("property", 4);
			LeaveRule("property", 4);
			LeaveRule_property();
		}
		DebugLocation(32, 1);
		} finally { DebugExitRule(GrammarFileName, "property"); }
		return retval;

	}
	// $ANTLR end "property"

	partial void EnterRule_propertyName();
	partial void LeaveRule_propertyName();
	// $ANTLR start "propertyName"
	// ./src/Parser/Grammar/JFL.g:34:1: propertyName : ( ID | ESC_ID | REGEX | '*' );
	[GrammarRule("propertyName")]
	private AstParserRuleReturnScope<object, IToken> propertyName()
	{
		EnterRule_propertyName();
		EnterRule("propertyName", 5);
		TraceIn("propertyName", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set13 = default(IToken);

		object set13_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "propertyName");
		DebugLocation(34, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:35:2: ( ID | ESC_ID | REGEX | '*' )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(35, 2);

			set13=(IToken)input.LT(1);
			if (input.LA(1)==ESC_ID||input.LA(1)==ID||input.LA(1)==REGEX||input.LA(1)==27)
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set13));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("propertyName", 5);
			LeaveRule("propertyName", 5);
			LeaveRule_propertyName();
		}
		DebugLocation(39, 1);
		} finally { DebugExitRule(GrammarFileName, "propertyName"); }
		return retval;

	}
	// $ANTLR end "propertyName"

	partial void EnterRule_filter();
	partial void LeaveRule_filter();
	// $ANTLR start "filter"
	// ./src/Parser/Grammar/JFL.g:41:1: filter : '[' filterExpr ']' -> ^( FILTER filterExpr ) ;
	[GrammarRule("filter")]
	private AstParserRuleReturnScope<object, IToken> filter()
	{
		EnterRule_filter();
		EnterRule("filter", 6);
		TraceIn("filter", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal14 = default(IToken);
		IToken char_literal16 = default(IToken);
		AstParserRuleReturnScope<object, IToken> filterExpr15 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal14_tree = default(object);
		object char_literal16_tree = default(object);
		RewriteRuleITokenStream stream_32=new RewriteRuleITokenStream(adaptor,"token 32");
		RewriteRuleITokenStream stream_33=new RewriteRuleITokenStream(adaptor,"token 33");
		RewriteRuleSubtreeStream stream_filterExpr=new RewriteRuleSubtreeStream(adaptor,"rule filterExpr");
		try { DebugEnterRule(GrammarFileName, "filter");
		DebugLocation(41, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:41:8: ( '[' filterExpr ']' -> ^( FILTER filterExpr ) )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:41:10: '[' filterExpr ']'
			{
			DebugLocation(41, 10);
			char_literal14=(IToken)Match(input,32,Follow._32_in_filter171);  
			stream_32.Add(char_literal14);

			DebugLocation(41, 14);
			PushFollow(Follow._filterExpr_in_filter173);
			filterExpr15=filterExpr();
			PopFollow();

			stream_filterExpr.Add(filterExpr15.Tree);
			DebugLocation(41, 25);
			char_literal16=(IToken)Match(input,33,Follow._33_in_filter175);  
			stream_33.Add(char_literal16);



			{
			// AST REWRITE
			// elements: filterExpr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 41:29: -> ^( FILTER filterExpr )
			{
				DebugLocation(41, 32);
				// ./src/Parser/Grammar/JFL.g:41:32: ^( FILTER filterExpr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(41, 34);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FILTER, "FILTER"), root_1);

				DebugLocation(41, 41);
				adaptor.AddChild(root_1, stream_filterExpr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

			catch (RecognitionException e) {
				throw e;
			}

		finally
		{
			TraceOut("filter", 6);
			LeaveRule("filter", 6);
			LeaveRule_filter();
		}
		DebugLocation(42, 1);
		} finally { DebugExitRule(GrammarFileName, "filter"); }
		return retval;

	}
	// $ANTLR end "filter"

	partial void EnterRule_filterExpr();
	partial void LeaveRule_filterExpr();
	// $ANTLR start "filterExpr"
	// ./src/Parser/Grammar/JFL.g:44:1: filterExpr : ( comparison -> comparison ) ( CHAIN_OPERATOR comp= comparison -> ^( CHAIN_OPERATOR $filterExpr $comp) )* ;
	[GrammarRule("filterExpr")]
	private AstParserRuleReturnScope<object, IToken> filterExpr()
	{
		EnterRule_filterExpr();
		EnterRule("filterExpr", 7);
		TraceIn("filterExpr", 7);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken CHAIN_OPERATOR18 = default(IToken);
		AstParserRuleReturnScope<object, IToken> comp = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> comparison17 = default(AstParserRuleReturnScope<object, IToken>);

		object CHAIN_OPERATOR18_tree = default(object);
		RewriteRuleITokenStream stream_CHAIN_OPERATOR=new RewriteRuleITokenStream(adaptor,"token CHAIN_OPERATOR");
		RewriteRuleSubtreeStream stream_comparison=new RewriteRuleSubtreeStream(adaptor,"rule comparison");
		try { DebugEnterRule(GrammarFileName, "filterExpr");
		DebugLocation(44, 1);
		try
		{
			// ./src/Parser/Grammar/JFL.g:45:2: ( ( comparison -> comparison ) ( CHAIN_OPERATOR comp= comparison -> ^( CHAIN_OPERATOR $filterExpr $comp) )* )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:45:4: ( comparison -> comparison ) ( CHAIN_OPERATOR comp= comparison -> ^( CHAIN_OPERATOR $filterExpr $comp) )*
			{
			DebugLocation(45, 4);
			// ./src/Parser/Grammar/JFL.g:45:4: ( comparison -> comparison )
			DebugEnterAlt(1);
			// ./src/Parser/Grammar/JFL.g:45:5: comparison
			{
			DebugLocation(45, 5);
			PushFollow(Follow._comparison_in_filterExpr195);
			comparison17=comparison();
			PopFollow();

			stream_comparison.Add(comparison17.Tree);


			{
			// AST REWRITE
			// elements: comparison
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 45:16: -> comparison
			{
				DebugLocation(45, 19);
				adaptor.AddChild(root_0, stream_comparison.NextTree());

			}

			retval.Tree = root_0;
			}

			}

			DebugLocation(45, 31);
			// ./src/Parser/Grammar/JFL.g:45:31: ( CHAIN_OPERATOR comp= comparison -> ^( CHAIN_OPERATOR $filterExpr $comp) )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==CHAIN_OPERATOR))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./src/Parser/Grammar/JFL.g:45:32: CHAIN_OPERATOR comp= comparison
					{
					DebugLocation(45, 32);
					CHAIN_OPERATOR18=(IToken)Match(input,CHAIN_OPERATOR,Follow._CHAIN_OPERATOR_in_filterExpr203);  
					stream_CHAIN_OPERATOR.Add(CHAIN_OPERATOR18);

					DebugLocation(45, 51);
					PushFollow(Follow._comparison_in_filterExpr207);
					comp=comparison();
					PopFollow();

					stream_comparison.Add(comp.Tree);


					{
					// AST REWRITE
					// elements: CHAIN_OPERATOR, filterExpr, comp
					// token labels: 
					// rule labels: comp, retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.Tree = root_0;
					RewriteRuleSubtreeStream stream_comp=new RewriteRuleSubtreeStream(adaptor,"rule comp",comp!=null?comp.Tree:null);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

					root_0 = (object)adaptor.Nil();
					// 45:63: -> ^( CHAIN_OPERATOR $filterExpr $comp)
					{
						DebugLocation(45, 66);
						// ./src/Parser/Grammar/JFL.g:45:66: ^( CHAIN_OPERATOR $filterExpr $comp)
						{
						object root_1 = (object)adaptor.Nil();
						DebugLocation(45, 68);
						root_1 = (object)adaptor.BecomeRoot(stream_CHAIN_OPERATOR.NextNode(), root_1);

						DebugLocation(45, 84);
						adaptor.AddChild(root_1, stream_retval.NextTree());
						DebugLocation(45, 96);
						adaptor.AddChild(root_1, stream_comp.NextTree());

						adaptor.AddChild(root_0, root_1);
						}

					}

					retval.Tree = root_0;
					}

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

			retval.Stop = (IToken)input.LT(-1);
